--- a/second.html
+++ b/second.html
@@ -32,7 +32,7 @@
 
 	<input type="submit" name="submitbtn" value="submit"><br><br>
 </form></b>
-	<a href="SOP1.HTML">first page</a>
+	<a href="index.html">first page</a>
 
 </body>
 </html>
